# convex-api-c

./: .gitignore  Makefile.am  README  README.md  annotated.html  classes.html  config_8h.html  config_8h_source.html  configure.ac  configure.am  convex_8c.html  convex_8c__incl.dot  convex_8h.html  convex_8h__dep__incl.dot  convex_8h__incl.dot  convex_8h_source.html  convex__account_8c.html  convex__account_8c__incl.dot  convex__account_8h.html  convex__account_8h__dep__incl.dot  convex__account_8h__incl.dot  convex__account_8h_source.html  convex__default_8h.html  convex__default_8h__dep__incl.dot  convex__default_8h_source.html  convex__error_8c.html  convex__error_8c__incl.dot  convex__error_8h.html  convex__error_8h__dep__incl.dot  convex__error_8h_source.html  convex__utils_8c.html  convex__utils_8c__incl.dot  convex__utils_8h.html  convex__utils_8h__dep__incl.dot  convex__utils_8h__incl.dot  convex__utils_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  (+12 more)
.github/workflows/: deploy_docs.yml  testing.yml
docs/html/: 20-example.html  annotated.html  config_8h.html  config_8h_source.html  convex_8h.html  convex__account_8h_source.html  convex__default_8h.html  convex__default_8h_source.html  convex__error_8c.html  convex__error_8h_source.html  convex__utils_8c.html  convex__utils_8h.html  convex_query_8c-example.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  examples.html  examples_2convex_query_8c-example.html  files.html  globals.html  globals_defs.html  globals_type.html  structconvex__t.html  structerror__message__t.html
docs/html/search/: all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  functions_0.js  pages_0.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
docs/latex/: 20-example.tex  annotated.tex  config_8h.tex  convex_8c.tex  convex_8h.tex  convex__account_8c.tex  convex__account_8h.tex  convex__default_8h.tex  convex__error_8c.tex  convex__error_8h.tex  convex__utils_8c.tex  convex__utils_8h.tex  convex_query_8c-example.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  examples.tex  examples_2convex_query_8c-example.tex  files.tex  index.tex  refman.tex  structconvex__account__t.tex  structconvex__t.tex  structerror__message__t.tex  structresponse__t.tex
examples/: Makefile.am  example_convex_account.c  example_convex_query.c  example_convex_send.c
lib/: Makefile.am  convex.c  convex.h
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
src/: Makefile.am  config.h.in  convex.c  convex.h  convex_account.c  convex_account.h  convex_default.h  convex_error.c  convex_error.h  convex_key_pair.c  convex_key_pair.h  convex_utils.c  convex_utils.h
test/: Makefile.am
test/.deps/: main.Po
tests/: Makefile.am  test1.c  test_convex_account.c  test_convex_account_export_file.c  test_convex_account_export_text.c  test_convex_account_init.c  test_convex_account_public_key.c  test_convex_account_sign_data.c  test_convex_create_account.c  test_convex_get_account_balance.c  test_convex_get_account_information.c  test_convex_get_address.c  test_convex_init  test_convex_init.c  test_convex_key_pair_export_file.c  test_convex_key_pair_export_text.c  test_convex_key_pair_init.c  test_convex_key_pair_public_key.c  test_convex_key_pair_sign_data.c  test_convex_query.c  test_convex_request_funds.c  test_convex_send.c  test_convex_transfer.c  test_convex_utils_bytes_to_hex.c  test_convex_utils_hex_to_bytes.c  test_convex_utils_public_key_to_hex.c  test_key_gen.c
