AM_DEFAULT_SOURCE_EXT = .c
LDADD = $(top_builddir)/src/libconvex.la

TESTS = test_convex_init test_convex_query \
test_convex_account_init \
test_convex_account_export_text \
test_convex_account_export_file \
test_convex_account_public_key \
test_convex_utils_public_key_to_hex

check_PROGRAMS = test_convex_init \
test_convex_query \
test_convex_account_init \
test_convex_account_export_text \
test_convex_account_export_file \
test_convex_account_public_key \
test_convex_utils_public_key_to_hex
