AM_DEFAULT_SOURCE_EXT = .c
LDADD = $(top_builddir)/src/libconvex.la

TESTS = test_convex_init \
test_convex_query \
test_convex_create_account \
test_convex_request_funds \
test_convex_get_address \
test_convex_send \
test_convex_transfer \
test_convex_get_account_information \
test_convex_get_account_balance \
test_convex_key_pair_init \
test_convex_key_pair_export_text \
test_convex_key_pair_export_file \
test_convex_key_pair_public_key \
test_convex_key_pair_sign_data \
test_convex_utils_public_key_to_hex \
test_convex_utils_bytes_to_hex \
test_convex_utils_hex_to_bytes

check_PROGRAMS = test_convex_init \
test_convex_query \
test_convex_create_account \
test_convex_request_funds \
test_convex_get_address \
test_convex_send \
test_convex_transfer \
test_convex_get_account_information \
test_convex_get_account_balance \
test_convex_key_pair_init \
test_convex_key_pair_export_text \
test_convex_key_pair_export_file \
test_convex_key_pair_public_key \
test_convex_key_pair_sign_data \
test_convex_utils_public_key_to_hex \
test_convex_utils_bytes_to_hex \
test_convex_utils_hex_to_bytes
